Include libble_controller_s140.a to the build.

--- a/mdepx.conf
+++ b/mdepx.conf
@@ -1,4 +1,5 @@
 module mdepx;
+module nrfxlib;
 module src;
 
 link ./ldscript obj/nrf5340.elf;
@@ -26,6 +27,14 @@ set-build-flags -Wredundant-decls
 
 src {
 	objects main.o start.o;
+};
+
+nrfxlib {
+	module ble_controller;
+
+	ble_controller {
+		objects lib/cortex-m33+nodsp/soft-float/libble_controller_s140.a;
+	};
 };
 
 mdepx {
