add ble_test: work in progress

--- a/mdepx.conf
+++ b/mdepx.conf
@@ -26,14 +26,14 @@ set-build-flags -Wredundant-decls
 		-Werror;
 
 src {
-	objects main.o start.o;
+	objects main.o start.o ble.o;
 };
 
 nrfxlib {
 	module ble_controller;
 
 	ble_controller {
-		objects lib/cortex-m33+nodsp/soft-float/libble_controller_s140.a;
+		ldadd lib/cortex-m33+nodsp/soft-float/libble_controller_s140.a;
 	};
 };
 
