Split code between application mcu and network mcu.

--- a/mdepx-net.conf
+++ b/mdepx-net.conf
@@ -1,8 +1,8 @@
 module mdepx;
 module nrfxlib;
-module src;
+module src-net;
 
-link ./ldscript obj/nrf5340.elf;
+link ./src-net/ldscript obj/nrf5340-net.elf;
 
 set-search-path mdepx/include mdepx/kernel mdepx/arch mdepx .;
 
@@ -25,7 +25,7 @@ set-build-flags -Wredundant-decls
 		-Wall
 		-Werror;
 
-src {
+src-net {
 	objects main.o start.o ble.o;
 };
 
