Create bt events RX thread.

--- a/mdepx-net.conf
+++ b/mdepx-net.conf
@@ -56,9 +56,10 @@ mdepx {
 		module malloc;
 		module systm;
 		module thread;
+		module sched;
 
 		callout {
-			options tsleep;
+			options tsleep_sched;
 		};
 
 		malloc {
@@ -67,6 +68,14 @@ mdepx {
 
 		systm {
 			options panic console;
+		};
+
+		thread {
+			options dynamic_alloc;
+		};
+
+		sched {
+			options sem;
 		};
 	};
 
