Cleanup: disable scheduler on NET core. Enable scheduler on the APP core. Include Intel Bluetooth library.

--- a/mdepx-app.conf
+++ b/mdepx-app.conf
@@ -47,9 +47,10 @@ mdepx {
 		module malloc;
 		module systm;
 		module thread;
+		module sched;
 
 		callout {
-			options tsleep;
+			options tsleep_sched;
 		};
 
 		malloc {
@@ -59,11 +60,16 @@ mdepx {
 		systm {
 			options panic console;
 		};
+
+		sched {
+			options sem;
+		};
 	};
 
 	lib {
 		module libc;
 		module libaeabi;
+		module bluetooth;
 
 		libc {
 			module stdio string stdlib;
