--- a/mdepx-net.conf
+++ b/mdepx-net.conf
@@ -5,6 +5,7 @@ module src-net;
 link ./src-net/ldscript obj/nrf5340-net.elf;
 
 set-search-path mdepx/include mdepx/kernel mdepx/arch mdepx .;
+set-search-path mdepx/lib/bluetooth;
 
 set-build-flags -mthumb
 		-mcpu=cortex-m4 -g
@@ -56,10 +57,9 @@ mdepx {
 		module malloc;
 		module systm;
 		module thread;
-		module sched;
 
 		callout {
-			options tsleep_sched;
+			options tsleep;
 		};
 
 		malloc {
@@ -68,14 +68,6 @@ mdepx {
 
 		systm {
 			options panic console;
-		};
-
-		thread {
-			options dynamic_alloc;
-		};
-
-		sched {
-			options sem;
 		};
 	};
 
