Enable ringbuffer-based communication between Bluetooth HCI stack that runs on APP mcu and the link-layer controller that runs on a separate MCU.

--- a/mdepx-app.conf
+++ b/mdepx-app.conf
@@ -4,6 +4,7 @@ module src-app;
 link ./src-app/ldscript obj/nrf5340-app.elf;
 
 set-search-path mdepx/include mdepx/kernel mdepx/arch mdepx .;
+set-search-path mdepx/lib/bluetooth;
 
 set-build-flags -mthumb
 		-mcpu=cortex-m4 -g
@@ -25,7 +26,7 @@ set-build-flags -Wredundant-decls
 		-Werror;
 
 src-app {
-	objects main.o start.o;
+	objects main.o start.o ble.o;
 };
 
 mdepx {
@@ -58,7 +59,7 @@ mdepx {
 		};
 
 		systm {
-			options panic console;
+			options panic console ringbuf;
 		};
 
 		sched {
