--- a/mdepx-net.conf
+++ b/mdepx-net.conf
@@ -57,9 +57,10 @@ mdepx {
 		module malloc;
 		module systm;
 		module thread;
+		module sched;
 
 		callout {
-			options tsleep;
+			options tsleep_sched;
 		};
 
 		malloc {
@@ -67,7 +68,11 @@ mdepx {
 		};
 
 		systm {
-			options panic console;
+			options panic console ringbuf;
+		};
+
+		sched {
+			options sem;
 		};
 	};
 
