Add common.h with ringbuffer base addresses. Move nrf.h to src-net/.

--- a/mdepx-net.conf
+++ b/mdepx-net.conf
@@ -5,7 +5,7 @@ module src-net;
 link ./src-net/ldscript obj/nrf5340-net.elf;
 
 set-search-path mdepx/include mdepx/kernel mdepx/arch mdepx .;
-set-search-path mdepx/lib/bluetooth;
+set-search-path mdepx/lib/bluetooth src-net;
 
 set-build-flags -mthumb
 		-mcpu=cortex-m4 -g
