Set MDX clock based on data received from Bluetooth CTS service.

--- a/mdepx-app.conf
+++ b/mdepx-app.conf
@@ -49,6 +49,7 @@ mdepx {
 		module systm;
 		module thread;
 		module sched;
+		module time;
 
 		callout {
 			options tsleep_sched;
@@ -73,7 +74,7 @@ mdepx {
 		module bluetooth;
 
 		libc {
-			module stdio string stdlib;
+			module stdio string stdlib time;
 		};
 	};
 };
