Update nrfxlib: some ble controller parts moved to the mpsl library. Update mdepx.

--- a/mdepx-app.conf
+++ b/mdepx-app.conf
@@ -55,20 +55,12 @@ mdepx {
 			quantum 10000;
 		};
 
-		callout {
-			options tsleep_sched;
-		};
-
 		malloc {
 			options fl fl_wrapper;
 		};
 
 		systm {
-			options panic console ringbuf;
-		};
-
-		sched {
-			options sem;
+			options console ringbuf;
 		};
 	};
 
