--- a/mdepx-net.conf
+++ b/mdepx-net.conf
@@ -32,9 +32,14 @@ src-net {
 
 nrfxlib {
 	module ble_controller;
+	module mpsl;
 
 	ble_controller {
 		ldadd lib/cortex-m33+nodsp/soft-float/libble_controller_s140.a;
+	};
+
+	mpsl {
+		ldadd lib/cortex-m33+nodsp/soft-float/libmpsl.a;
 	};
 };
 
@@ -63,20 +68,12 @@ mdepx {
 			quantum 10000;
 		};
 
-		callout {
-			options tsleep_sched;
-		};
-
 		malloc {
 			options fl fl_wrapper;
 		};
 
 		systm {
-			options panic console ringbuf;
-		};
-
-		sched {
-			options sem;
+			options console ringbuf;
 		};
 	};
 
