Update mdepx; Update nrfxlib;

--- a/mdepx-app.conf
+++ b/mdepx-app.conf
@@ -51,8 +51,8 @@ mdepx {
 		module sched;
 		module time;
 
-		thread {
-			quantum 10000;
+		callout {
+			options usec_to_ticks;
 		};
 
 		malloc {
