--- a/mdepx-net.conf
+++ b/mdepx-net.conf
@@ -35,11 +35,19 @@ nrfxlib {
 	module mpsl;
 
 	ble_controller {
-		ldadd lib/cortex-m33+nodsp/soft-float/libble_controller_s140.a;
+		module lib;
+
+		lib {
+			module cortex-m33+nodsp;
+
+			cortex-m33+nodsp {
+				objects soft-float/libble_controller_s140.a;
+			};
+		};
 	};
 
 	mpsl {
-		ldadd lib/cortex-m33+nodsp/soft-float/libmpsl.a;
+		objects lib/cortex-m33+nodsp/soft-float/libmpsl.a;
 	};
 };
 
@@ -64,8 +72,8 @@ mdepx {
 		module thread;
 		module sched;
 
-		thread {
-			quantum 10000;
+		callout {
+			options usec_to_ticks_1mhz;
 		};
 
 		malloc {
