Board code moved to mdepx/boards/nrf5340-dk/

--- a/mdepx-app.conf
+++ b/mdepx-app.conf
@@ -1,5 +1,5 @@
-module mdepx;
 module src-app;
+module mdepx;
 
 link ./src-app/ldscript obj/nrf5340-app.elf;
 
@@ -30,37 +30,14 @@ src-app {
 };
 
 mdepx {
-	module arch;
-	module kernel;
+	module boards;
 	module lib;
 
-	arch {
-		module arm;
+	boards {
+		module nrf5340-dk;
 
-		arm {
-			options nrf9160;
-		};
-	};
-
-	kernel {
-		module cpu;
-		module callout;
-		module malloc;
-		module systm;
-		module thread;
-		module sched;
-		module time;
-
-		callout {
-			options usec_to_ticks_1mhz;
-		};
-
-		malloc {
-			options fl fl_wrapper;
-		};
-
-		systm {
-			options console ringbuf;
+		nrf5340-dk {
+			module app;
 		};
 	};
 
