--- a/mdepx-net.conf
+++ b/mdepx-net.conf
@@ -52,36 +52,14 @@ nrfxlib {
 };
 
 mdepx {
-	module arch;
-	module kernel;
+	module boards;
 	module lib;
 
-	arch {
-		module arm;
+	boards {
+		module nrf5340-dk;
 
-		arm {
-			options nrf9160;
-		};
-	};
-
-	kernel {
-		module cpu;
-		module callout;
-		module malloc;
-		module systm;
-		module thread;
-		module sched;
-
-		callout {
-			options usec_to_ticks_1mhz;
-		};
-
-		malloc {
-			options fl fl_wrapper;
-		};
-
-		systm {
-			options console ringbuf;
+		nrf5340-dk {
+			module net;
 		};
 	};
 
