Boards rename to board.

--- a/mdepx-app.conf
+++ b/mdepx-app.conf
@@ -30,10 +30,10 @@ src-app {
 };
 
 mdepx {
-	module boards;
+	module board;
 	module lib;
 
-	boards {
+	board {
 		module nrf5340-dk;
 
 		nrf5340-dk {
