--- a/mdepx-net.conf
+++ b/mdepx-net.conf
@@ -52,10 +52,10 @@ nrfxlib {
 };
 
 mdepx {
-	module boards;
+	module board;
 	module lib;
 
-	boards {
+	board {
 		module nrf5340-dk;
 
 		nrf5340-dk {
