Update mdepx, nrfxlib.

--- a/mdepx-app.conf
+++ b/mdepx-app.conf
@@ -1,5 +1,5 @@
-module src-app;
-module mdepx;
+modules src-app;
+modules mdepx;
 
 link ./src-app/ldscript obj/nrf5340-app.elf;
 
@@ -29,25 +29,58 @@ src-app {
 	objects main.o start.o ble.o;
 };
 
+
 mdepx {
-	module board;
-	module lib;
+	modules board;
+	modules lib;
+	modules arch;
+	modules kernel;
+
+	arch {
+		modules arm;
+
+		arm {
+			options nrf9160;
+		};
+	};
 
 	board {
-		module nrf5340-dk;
+		modules nrf5340-dk;
 
 		nrf5340-dk {
-			module app;
+			modules app;
+		};
+	};
+
+	kernel {
+		modules cpu;
+		modules callout;
+		modules malloc;
+		modules systm;
+		modules thread;
+		modules sched;
+		modules time;
+
+		callout {
+			options usec_to_ticks_1mhz;
+		};
+
+		malloc {
+			options fl fl_wrapper;
+		};
+
+		systm {
+			options console ringbuf;
 		};
 	};
 
 	lib {
-		module libc;
-		module libaeabi;
-		module bluetooth;
+		modules libc;
+		modules libaeabi;
+		modules bluetooth;
 
 		libc {
-			module stdio string stdlib time;
+			modules stdio string stdlib time;
 		};
 	};
 };
