--- a/mdepx-net.conf
+++ b/mdepx-net.conf
@@ -1,6 +1,6 @@
-module mdepx;
-module nrfxlib;
-module src-net;
+modules mdepx;
+modules nrfxlib;
+modules src-net;
 
 link ./src-net/ldscript obj/nrf5340-net.elf;
 
@@ -31,14 +31,14 @@ src-net {
 };
 
 nrfxlib {
-	module ble_controller;
-	module mpsl;
+	modules ble_controller;
+	modules mpsl;
 
 	ble_controller {
-		module lib;
+		modules lib;
 
 		lib {
-			module cortex-m33+nodsp;
+			modules cortex-m33+nodsp;
 
 			cortex-m33+nodsp {
 				objects soft-float/libble_controller_s140.a;
@@ -52,23 +52,54 @@ nrfxlib {
 };
 
 mdepx {
-	module board;
-	module lib;
+	modules arch;
+	modules board;
+	modules kernel;
+	modules lib;
+
+	arch {
+		modules arm;
+
+		arm {
+			options nrf9160;
+		};
+	};
 
 	board {
-		module nrf5340-dk;
+		modules nrf5340-dk;
 
 		nrf5340-dk {
-			module net;
+			modules net;
+		};
+	};
+
+	kernel {
+		modules cpu;
+		modules callout;
+		modules malloc;
+		modules systm;
+		modules thread;
+		modules sched;
+
+		callout {
+			options usec_to_ticks_1mhz;
+		};
+
+		malloc {
+			options fl fl_wrapper;
+		};
+
+		systm {
+			options console ringbuf;
 		};
 	};
 
 	lib {
-		module libc;
-		module libaeabi;
+		modules libc;
+		modules libaeabi;
 
 		libc {
-			module stdio string stdlib;
+			modules stdio string stdlib;
 		};
 	};
 };
