Move search-path entries.

--- a/mdepx-app.conf
+++ b/mdepx-app.conf
@@ -3,9 +3,6 @@ modules mdepx;
 
 link ./src-app/ldscript obj/nrf5340-app.elf;
 
-set-search-path mdepx/include mdepx/kernel mdepx/arch mdepx .;
-set-search-path mdepx/lib/bluetooth;
-
 set-build-flags -mthumb
 		-mcpu=cortex-m4 -g
 		-nostdlib -nostdinc
@@ -26,9 +23,14 @@ set-build-flags -Wredundant-decls
 		-Werror;
 
 src-app {
+	append-search-path ../mdepx/arch
+			   ../mdepx/include
+			   ../mdepx/kernel
+			   ../mdepx/lib/bluetooth
+			   ../mdepx
+			   ../;
 	objects main.o start.o ble.o;
 };
-
 
 mdepx {
 	modules board;
