--- a/mdepx-net.conf
+++ b/mdepx-net.conf
@@ -4,9 +4,6 @@ modules src-net;
 
 link ./src-net/ldscript obj/nrf5340-net.elf;
 
-set-search-path mdepx/include mdepx/kernel mdepx/arch mdepx .;
-set-search-path mdepx/lib/bluetooth src-net;
-
 set-build-flags -mthumb
 		-mcpu=cortex-m4 -g
 		-nostdlib -nostdinc
@@ -27,6 +24,12 @@ set-build-flags -Wredundant-decls
 		-Werror;
 
 src-net {
+	append-search-path ../mdepx/arch
+			   ../mdepx/include
+			   ../mdepx/kernel
+			   ../mdepx/lib/bluetooth
+			   ../mdepx
+			   ../ ./;
 	objects main.o start.o ble.o;
 };
 
