Use correct mcpu.

--- a/src-net/mdepx.conf
+++ b/src-net/mdepx.conf
@@ -5,7 +5,8 @@ modules src-net;
 link ./src-net/ldscript obj/nrf5340-net.elf;
 
 set-build-flags -mthumb
-		-mcpu=cortex-m4 -g
+		-mcpu=cortex-m33
+		-g
 		-nostdlib -nostdinc
 		-fshort-enums
 		-fno-builtin-printf
