Enable ARM VFP on the application core.

--- a/src-app/mdepx.conf
+++ b/src-app/mdepx.conf
@@ -3,8 +3,11 @@ modules mdepx;
 
 link ./src-app/ldscript obj/nrf5340-app.elf;
 
-set-build-flags -mthumb
-		-mcpu=cortex-m4 -g
+set-build-flags	-mthumb
+		-mcpu=cortex-m33
+		-mfpu=fpv5-sp-d16
+		-mfloat-abi=hard
+		-g
 		-nostdlib -nostdinc
 		-fshort-enums
 		-fno-builtin-printf
@@ -42,7 +45,7 @@ mdepx {
 		modules arm;
 
 		arm {
-			options nrf9160;
+			options nrf9160 vfp;
 		};
 	};
 
@@ -55,13 +58,13 @@ mdepx {
 	};
 
 	kernel {
-		modules cpu;
-		modules callout;
-		modules malloc;
-		modules systm;
-		modules thread;
-		modules sched;
-		modules time;
+		modules callout
+			cpu
+			malloc
+			sched
+			systm
+			thread
+			time;
 
 		callout {
 			options usec_to_ticks_1mhz;
@@ -77,12 +80,25 @@ mdepx {
 	};
 
 	lib {
-		modules libc;
-		modules libaeabi;
-		modules bluetooth;
+		modules aeabi_softfloat
+			bluetooth
+			ftoa
+			libaeabi
+			libc
+			softfloat;
 
 		libc {
 			modules stdio string stdlib time;
+		};
+
+		softfloat {
+			modules source;
+
+			source {
+				modules ARM-VFPv2;
+			};
+
+			options armvfpv2;
 		};
 	};
 };
