Include uart,intc and libfdt.

--- a/src-app/mdepx.conf
+++ b/src-app/mdepx.conf
@@ -32,14 +32,14 @@ src-app {
 			   ../mdepx/lib/bluetooth
 			   ../mdepx
 			   ../;
-	objects main.o start.o ble.o;
+	objects board.o main.o start.o ble.o;
 };
 
 mdepx {
-	modules board;
 	modules lib;
 	modules arch;
 	modules kernel;
+	modules dev;
 
 	arch {
 		modules arm;
@@ -49,17 +49,14 @@ mdepx {
 		};
 	};
 
-	board {
-		modules nrf5340-dk;
-
-		nrf5340-dk {
-			modules app;
-		};
+	dev {
+		modules uart intc;
 	};
 
 	kernel {
 		modules callout
 			cpu
+			fdt
 			malloc
 			sched
 			systm
@@ -85,6 +82,7 @@ mdepx {
 			ftoa
 			libaeabi
 			libc
+			libfdt
 			softfloat;
 
 		libc {
