--- a/src-net/mdepx.conf
+++ b/src-net/mdepx.conf
@@ -31,7 +31,7 @@ src-net {
 			   ../mdepx/lib/bluetooth
 			   ../mdepx
 			   ../ ./;
-	objects main.o start.o ble.o;
+	objects board.o main.o start.o ble.o;
 };
 
 nrfxlib {
@@ -57,8 +57,8 @@ nrfxlib {
 
 mdepx {
 	modules arch;
-	modules board;
 	modules kernel;
+	modules dev;
 	modules lib;
 
 	arch {
@@ -69,17 +69,14 @@ mdepx {
 		};
 	};
 
-	board {
-		modules nrf5340-dk;
-
-		nrf5340-dk {
-			modules net;
-		};
+	dev {
+		modules uart intc;
 	};
 
 	kernel {
 		modules cpu;
 		modules callout;
+		modules fdt;
 		modules malloc;
 		modules systm;
 		modules thread;
@@ -100,6 +97,7 @@ mdepx {
 
 	lib {
 		modules libc;
+		modules libfdt;
 		modules libaeabi;
 
 		libc {
