--- a/src-app/mdepx.conf
+++ b/src-app/mdepx.conf
@@ -45,7 +45,13 @@ mdepx {
 		modules arm;
 
 		arm {
-			options nrf9160 vfp;
+			modules nordicsemi;
+
+			options vfp trustzone;
+
+			nordicsemi {
+				options nrf9160;
+			};
 		};
 	};
 
@@ -56,8 +62,8 @@ mdepx {
 	kernel {
 		modules callout
 			cpu
-			fdt
 			malloc
+			of
 			sched
 			systm
 			thread
