--- a/src-net/mdepx.conf
+++ b/src-net/mdepx.conf
@@ -65,7 +65,13 @@ mdepx {
 		modules arm;
 
 		arm {
-			options nrf9160;
+			modules nordicsemi;
+
+			options trustzone;
+
+			nordicsemi {
+				options nrf9160;
+			};
 		};
 	};
 
@@ -76,8 +82,8 @@ mdepx {
 	kernel {
 		modules cpu;
 		modules callout;
-		modules fdt;
 		modules malloc;
+		modules of;
 		modules systm;
 		modules thread;
 		modules sched;
