--- a/src-app/mdepx.conf
+++ b/src-app/mdepx.conf
@@ -29,6 +29,7 @@ src-app {
 	append-search-path ../mdepx/arch
 			   ../mdepx/include
 			   ../mdepx/kernel
+			   ../mdepx/lib
 			   ../mdepx/lib/bluetooth
 			   ../mdepx
 			   ../;
@@ -56,7 +57,7 @@ mdepx {
 	};
 
 	dev {
-		modules uart intc;
+		modules uart intc gpio;
 	};
 
 	kernel {
@@ -78,7 +79,7 @@ mdepx {
 		};
 
 		systm {
-			options console ringbuf;
+			options console ringbuf device;
 		};
 	};
 
